# es-api-gitcoop

./: .gitignore  .travis.yml  Dockerfile  Log-by-PM.md  README.md  es-api.cabal  requirements.txt  stack.yaml
app/: Main.hs
