name:                es-api
version:             0.0.1
synopsis:            Spanish verb conjugation as a service.
description:         Spanish verb conjugation as a service.
homepage:            https://github.com/lwm/es-api
license:             AGPL-3
license-file:        LICENSE
author:              Luke Murphy
maintainer:          lukewm@riseup.net
copyright:           AGPL-3
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Web.Main
    Web.Docs
    DB.Main
    DB.Query.QueryDB
    DB.Query.QueryStrings
    DB.Query.QueryTypes
  build-depends:
      base >= 4.7 && < 5
    , postgresql-simple
    , interpolatedstring-perl6
    , mtl
    , servant
    , servant-server
    , servant-docs
    , aeson
    , either
    , text
  default-language: Haskell2010

executable es-api
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5
    , es-api
    , wai
    , warp
    , servant
    , servant-server
    , servant-docs
    , bytestring
    , text
    , http-types
    , servant-jquery
    , servant-pandoc
    , pandoc
    , js-jquery
  default-language: Haskell2010

source-repository head
  type:     git
  location: git@github.com:lwm/es-api.git
